# src/rest/model/generate-project-response.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class GenerateProjectResponse {
+  @ApiProperty()
+  url: string;
+}
